# THI-T-K-V-THI-C-NG-H-TH-NG-KH-A-C-A-TH-NG-MINH-

./: CMakeLists.txt  README.md  SmartDoor.desktop  check_syntax2.py  clear_db.py  dataset.pkl  debug_history.py  download_logs.py  download_server.py  download_server2.py  event_bridge.py  face_driver.py  fix_json_final.py  fix_status.py  inject_error2.py  inject_error3.py  lv_conf.h  ps_output.txt  reboot_pi.py  rfid_driver.py  run_foreground.py  run_server_timeout.py  sensor_driver.py  server.py  server_final.py  server_final_fix.py  smart_door_events.json  start_and_curl_bash.py  start_smart_door.sh  sync_data.py  sync_src.py  sync_web.py  test_event.py  test_gpio.py  upload.py  upload_all.py  upload_compile.py
data/: access_history.json  passwords.txt
face_models/: yolov5n.onnx
lvgl/: lv_conf_template.h
messages/: msg_20260517-082705.avi  msg_20260517-082717.avi  msg_20260611-205754.avi
models/: README.md
scripts/: launch.sh  setup_autostart.sh  setup_touch.sh  start_smart_door.sh
src/: main.cpp
src/config/: config.h  config.py
src/drivers/: face_engine.py  lock_controller.cpp  lock_controller.h  process_manager.cpp  process_manager.h
src/hal/: rfid_driver.py  sensor_driver.py
src/ipc/: ipc_bridge.cpp  ipc_bridge.h
src/services/: auth_service.cpp  auth_service.h  delivery_service.cpp  delivery_service.h  event_logger.cpp  event_logger.h
src/ui/: ui_app.cpp  ui_app.h  ui_manager.cpp  ui_manager.h
tools/: check_event_bridge.py  check_logs.py  check_server.py  check_syntax.py  curl_from_pi.py  debug_server.py  deploy_to_pi.py  download_crash.py  fix_json.py  fix_server.py  inject.py  inject_error.py  start_and_curl.py  test_eb.py  test_event_bridge.py  test_system.py  upload_appjs.py
web/: app.js  event_bridge.py  index.html  server.py  style.css
